# ManiT

./: ManiTSummary1.md  ManiTSummary2.md  ManiTSummary3.md  ManiTSummary4.md  lexer.sh  parse_chat.py  philosophyOfManiT.txt  tools.sh
manit_compiler/: CMakeLists.txt  debug.sh  file_structure.txt  manitc.sh  test.manit
manit_compiler/src/: ast.cpp  ast.hpp  codegen.cpp  codegen.hpp  lexer.cpp  lexer.hpp  main.cpp  parser.cpp  parser.hpp  token.hpp
